# exercise

./: .gitignore  CMakeLists.txt
inc/: match.h  scoreboard.h  team.h
src/: CMakeLists.txt  match.cpp  scoreboard.cpp
tests/: CMakeLists.txt  match_tests.cpp  scoreboard_tests.cpp  team_tests.cpp
